apps/60-services/sakapuss/base/patch-frontend-nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sakapuss-frontend
spec:
  template:
    metadata:
      annotations:
        vixens.io/fast-start: "true"
    spec:
      containers:
        - name: frontend
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config
          configMap:
            name: sakapuss-nginx-config
