apps/60-services/sakapuss/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sakapuss-backend
  labels:
    app: sakapuss
    component: backend
spec:
  selector:
    app: sakapuss
    component: backend
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: sakapuss-frontend
  labels:
    app: sakapuss
    component: frontend
spec:
  selector:
    app: sakapuss
    component: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
